--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "bugs": {
-    "url": "https://github.com/sean-codes/atom-windows-titlebar/issues"
+    "url": "https://github.com/cseitz5/atom-windows-titlebar-edit/issues"
   },
   "bundleDependencies": false,
   "configSchema": {
@@ -17,10 +17,14 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "homepage": "https://github.com/sean-codes/atom-windows-titlebar#readme",
+  "homepage": "https://github.com/cseitz5/atom-windows-titlebar-edit#readme",
   "keywords": [],
   "license": "MIT",
   "main": "./lib/atom-windows-titlebar",
   "name": "atom-windows-titlebar-edit",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cseitz5/atom-windows-titlebar-edit.git"
+  },
   "version": "0.14.0"
 }
