--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "name": "atom-windows-titlebar-edit",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cseitz5/atom-windows-titlebar-edit.git"
+    "url": "https://github.com/cseitz5/atom-windows-titlebar-edit.git"
   },
   "version": "0.16.0"
 }
